Fixed site deployment issues and about img overlap

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -69,17 +69,24 @@
         grid-template-columns: repeat(2, 1fr);
     }
 
-    
+
 }
 
 // Smartphones
 @include mediaSm {
-    main#home h1{
+    main{
+        padding: 2rem;
+    #home h1{
         margin-top: 10vh;
     }
 
+    .lg-heading{
+        margin-top: 1rem;
+        font-size: 5rem;
+    }
+}
     .projects{
-        grid-template-columns: repeat(1, 1fr);
+        grid-template-columns: 1fr;
     }
 
 }
